--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,16 @@
     //terminos string
     <string name="termRegresar">Regresar</string>
     <string name="termTitTerminos">Terminos y Condiciones</string>
-    <string name="termRellTerminos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet quis magna. Aenean velit odio, elementum in tempus ut, vehicula eu diam. Pellentesque rhoncus aliquam mattis. Ut vulputate eros sed felis sodales nec vulputate justo hendrerit. Vivamus varius pretium ligula, a aliquam odio euismod sit amet. Quisque laoreet sem sit amet orci ullamcorper at ultricies metus viverra. Pellentesque arcu mauris, malesuada quis ornare accumsan, blandit sed diam.</string>
+    <string name="termRellTerminos">Al acceder o utilizar nuestra aplicación móvil de reservas de
+        losas deportivas, el usuario acepta cumplir con estos Términos y Condiciones,
+        así como con cualquier otro aviso legal o política que se presente dentro de la
+        aplicación. Estos Términos y Condiciones rigen el uso de todos los servicios y funcionalidades
+        que ofrece la aplicación, y su objetivo es establecer los derechos y responsabilidades entre
+        el usuario y la empresa que gestiona la aplicación.
+
+        Última actualización: 10 de noviembre de 2024.
+
+        </string>
 
     //Bienvenido String
     <string name="bieLblSaludo">Bienvenido {usuario}</string>
